# fastapi-starter-template

./: .gitignore  404.html  LICENSE  README.MD  genmit.py  index.html  main.py  pyproject.toml
app/: __init__.py  backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
app/alembic/: env.py
app/api/: deps.py  main.py
app/api/routes/: items.py  login.py  private.py  users.py  utils.py
app/core/: config.py  db.py  security.py
app/tests/: conftest.py
app/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_users.py
app/tests/crud/: test_user.py
app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
app/tests/utils/: item.py  user.py  utils.py
scripts/: format.sh  lint.sh  prestart.sh  test.sh  tests-start.sh
search/: search_index.json
site/: index.html  sitemap.xml
