[project]
name = "fastapi-starter-template"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email,timezone]>=2.11.5",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.24",
]
